# NGIN

./: .clang-format  .gitignore  Alignment_8hpp_source.html  AllocatedStorage_8hpp_source.html  Allocator_8hpp_source.html  App_8h_source.html  AsyncLogger_8hpp_source.html  BaseLogger_8hpp_source.html  BaseSink_8hpp_source.html  CMakeCopyDll.cmake  CMakeLists.txt  CMakePresets.json  ClassRegistrar_8hpp_source.html  Class_8hpp_source.html  ConfigHelper_8hpp_source.html  Config_8h_source.html  ConsoleSink_8hpp_source.html  Context_8hpp_source.html  Core_8h_source.html  Defines_8hpp_source.html  Delegate_8hpp_source.html  Docs_8h_source.html  DynamicDelegate_8hpp_source.html  DynamicStorage_8hpp_source.html  Engine_8hpp_source.html  EntryPoint_8hpp_source.html  EnumRegistrar_8hpp_source.html  Enum_8hpp_source.html  EventBus_8hpp_source.html  FallbackAllocator_8hpp_source.html  Field_8hpp_source.html  FileSink_8hpp_source.html  File_8hpp_source.html  Format_8hpp_source.html  FreeListAllocator_8hpp_source.html  FunctionTraits_8hpp_source.html  Function_8hpp_source.html  GraphicsAPI_8hpp_source.html  GraphicsModule_8hpp_source.html  HybridStorage_8hpp_source.html  (+553 more)
DOCS/: CMakeLists.txt  Doxyfile.in  doxygen-awesome.css  index.md
NGIN/: CMakeDependencies.cmake  CMakeLists.txt  NGIN.cpp  NGIN.h
NGIN/include/: App.h  Core.h  EventBus.h  EventBus.inl  Layer.h  LayerStack.h  Logger.h  NGIN.h  PCH.h  SDLWindow.h  WarningDisabler.h  Window.h
NGIN/include/Config/: Config.h
NGIN/include/Core/: App.h  Config.h  Core.h  EntryPoint.hpp  EventBus.h  Logger.h
NGIN/include/Core/Logging/: AsyncLogger.hpp  BaseLogger.hpp  ConsoleSink.hpp  ILogSink.hpp  LogDefinitions.hpp  LogSink.hpp
NGIN/include/Core/Memory/: FreeListAllocator.h  LinearAllocator.h  LinearAllocator.hpp  StackAllocator.h  StackAllocator.hpp
NGIN/include/Detail/: ConfigHelper.hpp  Docs.h  LoggingHelper.hpp
NGIN/include/Docs/: Docs.h
NGIN/include/HideWarnings/: Json.hpp  Loguru.hpp  fmt.hpp
NGIN/include/Memory/: Allocator.h  Allocator.inl  FreeListAllocator.h  LinearAllocator.h
NGIN/include/NGIN/: App.h  Config.h  Core.h  Defines.hpp  EntryPoint.hpp  EventBus.hpp  Layer.h  Layer.hpp  LayerStack.h  Logger.h  Logging.hpp  Memory.hpp  MockLayer.hpp  Time.hpp
NGIN/include/NGIN/Core/: Engine.hpp  EventBus.hpp  EventListener.hpp  Layer.hpp  Module.hpp  TestLayer.hpp  TestModule.hpp  World.hpp
NGIN/include/NGIN/Graphics/: Context.hpp  GraphicsAPI.hpp  GraphicsBackend.hpp  IContext.hpp  IDevice.hpp  IRenderer.hpp  IShader.hpp  ISurface.hpp  Renderer.hpp  RenderingSurface.hpp  SDLWindow.hpp  Shader.hpp  Surface.hpp  Window.hpp
NGIN/include/NGIN/IO/: File.hpp
NGIN/include/NGIN/Logging/: AsyncLogger.hpp  BaseLogger.hpp  BaseSink.hpp  ConsoleSink.hpp  Defines.hpp  FileSink.hpp
NGIN/include/NGIN/Memory/: Allocator.hpp  AllocatorNew.hpp  Concepts.hpp  FallbackAllocator.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  LinearAllocatorNew.hpp  Mallocator.hpp  StackAllocator.hpp  Util.hpp
NGIN/include/NGIN/Meta/: AllocatorStoragePolicy.hpp  Deleter.hpp  DynamicStoragePolicy.hpp  Function.hpp  FunctionTraits.hpp  HybridStoragePolicy.hpp  Reflection.hpp  StaticStoragePolicy.hpp  StoragePolicy.hpp  TypeID.hpp  TypeId.hpp  TypeName.hpp  TypeWrapper.hpp  UUID.hpp
NGIN/include/NGIN/Time/: Defines.hpp  Time.hpp  Timer.hpp  Util.hpp
NGIN/include/NGIN/TypeErasure/: AllocatorStoragePolicy.hpp  Deleter.hpp  DynamicStoragePolicy.hpp  HybridStoragePolicy.hpp  StaticStoragePolicy.hpp
NGIN/include/NGIN/Util/: AllocatorStoragePolicy.hpp  Delegate.hpp  Delegate2.hpp  Format.hpp  JSON.hpp  StringUtils.hpp  TimeUtils.hpp  TupleUtils.hpp  TypeErasure.hpp
NGIN/include/NGIN/VFS/: Globals.hpp  Path.hpp
NGIN/include/Precompiled/: PCH.h
NGIN/include/Utils/: JSON.hpp  StringConversion.hpp  StringUtils.hpp  TimeUtils.hpp  TupleHelper.hpp  TypeErasure.hpp
NGIN/src/: App.cpp  EntryPoint.cpp  LayerStack.cpp  SDLWindow.cpp
NGIN/src/Config/: Config.cpp
NGIN/src/Core/: App.cpp  Config.cpp  Layer.cpp  LayerStack.cpp  SDLWindow.cpp
NGIN/src/Core/Logging/: AsyncLogger.cpp  ConsoleSink.cpp
NGIN/src/Core/Memory/: Allocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  StackAllocator.cpp
NGIN/src/Core/Precompiled/: PCH.cpp
NGIN/src/Memory/: Allocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  StackAllocator.cpp
NGIN/src/NGIN/: App.cpp  Config.cpp  Layer.cpp  LayerStack.cpp  Logging.cpp  SDLWindow.cpp
NGIN/src/NGIN/Core/: Engine.cpp  EventBus.cpp
NGIN/src/NGIN/Graphics/: Context.cpp  SDLWindow.cpp  Window.cpp
NGIN/src/NGIN/Logging/: AsyncLogger.cpp  BaseLogger.cpp  ConsoleSink.cpp  FileSink.cpp
NGIN/src/NGIN/Memory/: Allocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  Mallocator.cpp  StackAllocator.cpp
NGIN/src/NGIN/Meta/: UUID.cpp
NGIN/src/NGIN/VFS/: Path.cpp
NGIN/src/Utils/: JSON.cpp
NGIN/tests/: CMakeDependencies.cmake  CMakeLists.txt  main.cpp
NGIN/tests/NGIN/: Config.cpp
NGIN/tests/NGIN/Core/: EventBus.cpp
NGIN/tests/NGIN/Logging/: FileSink.cpp
NGIN/tests/NGIN/Memory/: Allocator.cpp  FreeListAllocator.cpp  StackAllocator.cpp
NGIN/tests/NGIN/Meta/: TypeID.cpp
NGIN/tests/NGIN/Util/: Format.cpp  JSON.cpp
NGIN/tests/NGIN/VFS/: Path.cpp
NGIN_EDITOR/: CMakeLists.txt
NGIN_EDITOR/src/: EditorApp.cpp  main.cpp
NGIN_ENGINE/: CMakeLists.txt
NGIN_ENGINE/include/: EventBus.h  Layer.h  LayerStack.h  engine.h
NGIN_ENGINE/src/: LayerStack.cpp  engine.cpp
TESTS/: CMakeLists.txt
TESTS/NGIN/: main.cpp
TESTS/NGIN/Core/: Config.cpp  Logger.cpp
TESTS/NGIN/Core/Memory/: FreeListAllocator.cpp
TESTS/NGIN/NGIN/: Config.cpp  EventBus.cpp  Logger.cpp
TESTS/NGIN/NGIN/Core/: EventBus.cpp
TESTS/NGIN/NGIN/Logging/: AsyncLogger.cpp
TESTS/NGIN/NGIN/Memory/: Allocator.cpp  FallbackAllocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  Mallocator.cpp  StackAllocator.cpp
TESTS/NGIN/NGIN/Meta/: DynamicStoragePolicy.cpp  HybridStoragePolicy.cpp  StaticStoragePolicy.cpp
TESTS/NGIN/NGIN/Util/: JSON.cpp
docs/: CMakeLists.txt
tests/: CMakeLists.txt
tests/NGIN/memory/: FreeListAllocator.cpp
(+152 files in other folders)
